--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <header class="main-header">
+        <div class="main-header__logo">
+            <img src='https://via.placeholder.com/100' class='main-header main-header__logo-img'> 
+        </div> <!-- .main-header__logo -->
+    </header>
+
     <script src='js/app.js'></script>
 </body>
 </html>
