--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="main-header__logo">
-            <img src='https://via.placeholder.com/100' class='main-header main-header__logo-img'> 
-        </div> <!-- .main-header__logo -->
+        <div class="main-header container">
+            <div class="main-header__logo">
+                <img src='https://via.placeholder.com/100' class='main-header main-header__logo-img'> 
+            </div> <!-- .main-header__logo -->
+            <div class='nav'>
+                <ul class='navbar'>
+                    <li class="navbar__item">Home</li>
+                    <li class="navbar__item">About</li>
+                    <li class="navbar__item navbar__item--last">Contact</li>
+                </ul> <!-- .navbar -->
+            </div> <!-- .main-header__logo -->
+        </div> <!-- .container -->
     </header>
 
     <script src='js/app.js'></script>
