--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="main-header container">
+        <div class="header-layout container">
             <div class="main-header__logo">
                 <img src='https://via.placeholder.com/100' class='main-header main-header__logo-img'> 
             </div> <!-- .main-header__logo -->
-            <div class='nav'>
+            <div class='navbar-layout'>
                 <ul class='navbar'>
                     <li class="navbar__item">Home</li>
                     <li class="navbar__item">About</li>
