initial hero section

--- a/dance.html
+++ b/dance.html
@@ -6,9 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grazia Dance Academy</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/dance.css">
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="navbar-wrapper">
+            <h2>Grazia</h2>
+            <ul class="navbar">
+                <li class="navbar__item">
+                    <a href="#" class="navbar__link">
+                        Nav Item
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__link">
+                        Nav Item
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__link">
+                        Nav Item
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__link">
+                        Nav Item
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__link">
+                        Nav Item
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__link">
+                        Login
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="hero-carousel">
+            <h1 class="hero-carousel__title">
+                Grazia<br>
+                Dance Academy
+            </h1>
+            <button class="btn">Join Class <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+        </div>
+
+    </section>
 </body>
 </html>
