working on the js carousel

--- a/dance.html
+++ b/dance.html
@@ -10,8 +10,13 @@
     <link rel="stylesheet" href="css/dance.css">
 </head>
 <body>
+
+
+    <!-- HERO SECTION -->
+
     <section class="hero">
-        <div class="navbar-wrapper container">
+
+        <nav class="navbar-wrapper container">
             <h2>Grazia</h2>
             <ul class="navbar">
                 <li class="navbar__item">
@@ -45,17 +50,27 @@
                     </a>
                 </li>
             </ul>
-        </div>
-        <div class="hero-carousel">
-            <h1 class="hero-carousel__title">
+        </nav> <!-- navbar-wrapper container -->
+
+        <div class="hero__description">
+            <h1 class="hero__title">
                 Grazia<br>
                 Dance Academy
             </h1>
             <button class="btn">Join Class <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
+
+        <div class="carousel__images">
+            <div class="carousel__panels">
+                <div class="carousel__panel carousel__panel--1"></div>
+                <div class="carousel__panel carousel__panel--2"></div>
+                <div class="carousel__panel carousel__panel--3"></div>
+            </div>
+        </div>
+
         <div class="carousel__controls">
-            <div class="carousel__control carousel__control--left-caret"><i class="fa fa-caret-left" aria-hidden="true"></i></div>
-            <div class="carousel__control carousel__control--right-caret"><i class="fa fa-caret-right" aria-hidden="true"></i></div>
+            <div class="carousel__control carousel__control--left-control"><</div>
+            <div class="carousel__control carousel__control--right-control">></div>
             <div class="carousel__slider">
                 <div class="carousel__slide"></div>
             </div>
