--- a/dance.html
+++ b/dance.html
@@ -62,9 +62,11 @@
 
         <div class="carousel__images">
             <div class="carousel__panels">
+                <div class="carousel__panel carousel__panel--3"></div>
                 <div class="carousel__panel carousel__panel--1"></div>
                 <div class="carousel__panel carousel__panel--2"></div>
                 <div class="carousel__panel carousel__panel--3"></div>
+                <div class="carousel__panel carousel__panel--1"></div>
             </div>
         </div>
 
