starting on About section, completes first card

--- a/dance.html
+++ b/dance.html
@@ -15,7 +15,6 @@
     <!-- HERO SECTION -->
 
     <section class="hero">
-
         <nav class="navbar-wrapper container">
             <h2>Grazia</h2>
             <ul class="navbar">
@@ -51,15 +50,13 @@
                 </li>
             </ul>
         </nav> <!-- navbar-wrapper container -->
-
         <div class="hero__description">
             <h1 class="hero__title">
                 Grazia<br>
                 Dance Academy
             </h1>
             <button class="btn">Join Class <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-        </div>
-
+        </div> <!-- hero__description -->
         <div class="carousel__images">
             <div class="carousel__panels">
                 <div class="carousel__panel carousel__panel--3"></div>
@@ -67,17 +64,55 @@
                 <div class="carousel__panel carousel__panel--2"></div>
                 <div class="carousel__panel carousel__panel--3"></div>
                 <div class="carousel__panel carousel__panel--1"></div>
-            </div>
-        </div>
-
+            </div> <!-- .carousel__panels-->
+        </div> <!-- .carousel__images -->
         <div class="carousel__controls">
             <div class="carousel__control carousel__control--left-control"><</div>
             <div class="carousel__control carousel__control--right-control">></div>
             <div class="carousel__slider">
                 <div class="carousel__slide"></div>
-            </div>
+            </div> <!-- carousel__slider -->
+        </div> <!-- .carousel__controls-->
+    </section> <!-- hero section -->
+
+
+    <!-- ABOUT SECTION -->
+
+    <section class="about">
+        <div class="about__wrapper container">
+            <div class="info__card">
+                <img class="info__image" src="https://via.placeholder.com/400/400" />
+                <div class="info__description">
+                    <h2 class="card__header">Our Programs</h2>
+                    <ul class="program__pages">
+                        <li class="program__item">
+                            <a class="program__link" href="#">Classical Ballet</a>
+                        </li>
+                        <li class="program__item">
+                            <a class="program__link" href="#">Contemporary Jazz</a>
+                        </li>
+                        <li class="program__item">
+                            <a class="program__link" href="#">Modern</a>
+                        </li>
+                        <li class="program__item">
+                            <a class="program__link" href="#">Hip-Hop</a>
+                        </li>
+                        <li class="program__item">
+                            <a class="program__link" href="#">Dancehall</a>
+                        </li>
+                        <li class="program__item">
+                            <a class="program__link" href="#">Vogue</a>
+                        </li>
+                    </ul>
+                    <button class="btn btn--info">View All <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+                </div> <!-- .info__description -->
+            </div> <!-- .info__card -->
         </div>
-    </section>
+    </section> <!-- .about section -->
+
+
+
+
     <script src='js/dance.js'></script>
 </body>
 </html>
