--- a/dance.html
+++ b/dance.html
@@ -80,9 +80,9 @@
 
     <section class="about">
         <div class="about__wrapper container">
-            <div class="info__card">
-                <img class="info__image" src="https://via.placeholder.com/400/400" />
-                <div class="info__description">
+            <div class="card">
+                <img class="card__image" src="https://via.placeholder.com/400/400" />
+                <div class="card__description">
                     <h2 class="card__header">Our Programs</h2>
                     <ul class="program__pages">
                         <li class="program__item">
@@ -105,10 +105,25 @@
                         </li>
                     </ul>
                     <button class="btn btn--info">View All <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-                </div> <!-- .info__description -->
-            </div> <!-- .info__card -->
+                </div> <!-- .card__description -->
+            </div> <!-- .card -->
+
+            <div class="card card--even">
+                <img class="card__image card__image--even" src="https://via.placeholder.com/400/400" />
+                <div class="card__description card__description--even">
+                    <h2 class="card__header">Little Grazias</h2>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis reiciendis nam quo atque, necessitatibus perspiciatis ab accusantium quis hic minima veritatis nostrum libero asperiores et, eaque ducimus dicta nulla quaerat magnam illo quod eius soluta!</p>
+                    <button class="btn btn--info">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+                </div> <!-- .card__description -->
+            </div> <!-- .card -->
         </div>
     </section> <!-- .about section -->
+
+    <section class="event-calendar">
+        <div class="event-calendar__wrapper container">
+
+        </div>
+    </section> <!-- .event-calendar -->
 
 
 
