adds header to calendar section

--- a/dance.html
+++ b/dance.html
@@ -51,7 +51,7 @@
             </ul>
         </nav> <!-- navbar-wrapper container -->
         <div class="hero__description">
-            <h1 class="hero__title">
+            <h1 class="hero__title section__heading">
                 Grazia<br>
                 Dance Academy
             </h1>
@@ -121,7 +121,9 @@
 
     <section class="event-calendar">
         <div class="event-calendar__wrapper container">
-
+            <h1 class="event-calendar__title section__heading">Event<br>
+                Calendar
+            </h1>
         </div>
     </section> <!-- .event-calendar -->
 
