block-in of event calendar and teachers

--- a/dance.html
+++ b/dance.html
@@ -73,7 +73,7 @@
                 <div class="carousel__slide"></div>
             </div> <!-- carousel__slider -->
         </div> <!-- .carousel__controls-->
-    </section> <!-- hero section -->
+    </section> <!-- hero -->
 
 
     <!-- ABOUT SECTION -->
@@ -117,7 +117,10 @@
                 </div> <!-- .card__description -->
             </div> <!-- .card -->
         </div>
-    </section> <!-- .about section -->
+    </section> <!-- .about -->
+
+
+    <!-- EVENTS SECTION-->
 
     <section class="event-calendar">
         <div class="event-calendar__wrapper container">
@@ -128,25 +131,108 @@
                 <div class="events-carousel__panels">
                     <div class="events-carousel__panel">
                         <img class="events-carousel__image" src='img/calendar_01.png' alt='Event Name/Detail' />
-                        <h3>MM/DD - MM/DD</h3>
-                        <h4>Event Name</h4>
-                        <p>DETAILS DETAILS</p>
+                        <h3 class="event__date-range">MM/DD - MM/DD</h3>
+                        <h4 class="event__name">Event Name</h4>
+                        <p class="event__details"><a href="#" class="event__link">DETAILS DETAILS</a></p>
                     </div>
                     <div class="events-carousel__panel">
                         <img class="events-carousel__image" src='img/calendar_02.png' alt='Event Name/Detail' />
+                        <h3 class="event__date-range">MM/DD - MM/DD</h3>
+                        <h4 class="event__name">Event Name</h4>
+                        <p class="event__details"><a href="#" class="event__link">DETAILS DETAILS</a></p>
                     </div>
                     <div class="events-carousel__panel">
                         <img class="events-carousel__image" src='img/calendar_03.png' alt='Event Name/Detail' />
+                        <h3 class="event__date-range">MM/DD - MM/DD</h3>
+                        <h4 class="event__name">Event Name</h4>
+                        <p class="event__details"><a href="#" class="event__link">DETAILS DETAILS</a></p>
                     </div>
                     <div class="events-carousel__panel">
                         <img class="events-carousel__image" src='img/calendar_04.png' alt='Event Name/Detail' />
+                        <h3 class="event__date-range">MM/DD - MM/DD</h3>
+                        <h4 class="event__name">Event Name</h4>
+                        <p class="event__details"><a href="#" class="event__link">DETAILS DETAILS</a></p>
                     </div>
                 </div>
             </div>
-            <button class="btn btn--info btn--center">View All <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+            <button class="btn btn--view-all">View All <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
     </section> <!-- .event-calendar -->
 
+
+    <!-- TEACHERS SECTION -->
+    <section class="teachers">
+        <div class="teachers__wrapper container">
+            <h1 class="teachers__title section__heading">Our Teachers</h1>
+            <div class="teachers__container">
+                <div class="teacher__row">
+                    <div class="teacher__card">
+                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <h3 class="teacher__name">Teacher Name</h3>
+                        <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                    </div> <!-- .teacher__card -->
+                    <div class="teacher__card">
+                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <h3 class="teacher__name">Teacher Name</h3>
+                            <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                        </div> <!-- .teacher__card -->
+                        <div class="teacher__card">
+                                <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                                <h3 class="teacher__name">Teacher Name</h3>
+                                <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                            </div> <!-- .teacher__card -->
+                            <div class="teacher__card">
+                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <h3 class="teacher__name">Teacher Name</h3>
+                        <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                    </div> <!-- .teacher__card -->
+                    <div class="teacher__card">
+                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <h3 class="teacher__name">Teacher Name</h3>
+                        <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                    </div> <!-- .teacher__card -->
+                    <div class="teacher__card">
+                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <h3 class="teacher__name">Teacher Name</h3>
+                        <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                    </div> <!-- .teacher__card -->
+                </div> <!-- .teacher__row -->
+                <div class="teacher__row">
+                        <div class="teacher__card">
+                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <h3 class="teacher__name">Teacher Name</h3>
+                            <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                        </div> <!-- .teacher__card -->
+                        <div class="teacher__card">
+                                <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                                <h3 class="teacher__name">Teacher Name</h3>
+                                <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                            </div> <!-- .teacher__card -->
+                            <div class="teacher__card">
+                                    <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                                    <h3 class="teacher__name">Teacher Name</h3>
+                                    <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                                </div> <!-- .teacher__card -->
+                                <div class="teacher__card">
+                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <h3 class="teacher__name">Teacher Name</h3>
+                            <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                        </div> <!-- .teacher__card -->
+                        <div class="teacher__card">
+                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <h3 class="teacher__name">Teacher Name</h3>
+                            <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                        </div> <!-- .teacher__card -->
+                        <div class="teacher__card">
+                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <h3 class="teacher__name">Teacher Name</h3>
+                            <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
+                        </div> <!-- .teacher__card -->
+                    </div> <!-- .teacher__row -->
+            </div> <!-- .teachers -->
+            <button class="btn btn--view-all">View All <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+        </div> <!-- .teachers__wrapper container -->
+    </section> <!-- .teachers -->
 
 
 
