roughed in footer

--- a/dance.html
+++ b/dance.html
@@ -270,9 +270,15 @@
                     </li>
                 </ul>
                 <h2 class="footer__title">Grazia</h2>
-                <div class="address__info">
-                    <p>1234 North Any Street<br>City, State, Zip Code</p>
-                    <a href="mailto:info@grazia.com">info@grazia.com</a>
+                <div class="contact-info">
+                    <p class="contact-info__address">1234 North Any Street<br>City, State, Zip Code</p>
+                    <a href="mailto:info@grazia.com" class="contact-info__email">info@grazia.com</a>
+                    <p class="contact-info__phone">+1.888.888.8888</p>
+                </div>
+                <div class="social-media">
+                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
                 </div>
         </div>
     </footer>
