footer block-in

--- a/dance.html
+++ b/dance.html
@@ -258,12 +258,7 @@
                             Nav Item
                         </a>
                     </li>
-                    <li class="footer-navbar__item">
-                        <a href="#" class="footer-navbar__link">
-                            Nav Item
-                        </a>
-                    </li>
-                    <li class="footer-navbar__item">
+                    <li class="footer-navbar__item footer-navbar__item--last">
                         <a href="#" class="footer-navbar__link">
                             Nav Item
                         </a>
