fixed link href tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div> <!-- .main-header__logo -->
         </div> <!-- .container -->
     </header>
-    <a src='dance.html'>Link to Dance Studio Page</a>
+    <a href='dance.html'>Link to Dance Studio Page</a>
     <script src='js/app.js'></script>
 </body>
 </html>
