changes colors for section bg and footer text to match design

--- a/dance.html
+++ b/dance.html
@@ -264,16 +264,22 @@
                         </a>
                     </li>
                 </ul>
-                <h2 class="footer__title">Grazia</h2>
+                <h3 class="footer__title">Grazia</h3>
                 <div class="contact-info">
                     <p class="contact-info__address">1234 North Any Street<br>City, State, Zip Code</p>
                     <a href="mailto:info@grazia.com" class="contact-info__email">info@grazia.com</a>
                     <p class="contact-info__phone">+1.888.888.8888</p>
                 </div>
-                <div class="social-media">
-                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                <div class="footer__social-media">
+                    <a class="social-media__link" href="#">
+                        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    </a>
+                    <a class="social-media__link" href="#">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a class="social-media__link" href="#">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
                 </div>
         </div>
     </footer>
