adds teacher and program images

--- a/dance.html
+++ b/dance.html
@@ -81,7 +81,7 @@
     <section class="about">
         <div class="container">
             <div class="card">
-                <img class="card__image" src="https://via.placeholder.com/400/400" />
+                <img class="card__image" src="img/programs.png" />
                 <div class="card__description">
                     <h2 class="card__header">Our Programs</h2>
                     <ul class="program__pages">
@@ -109,7 +109,7 @@
             </div> <!-- .card -->
 
             <div class="card card--even">
-                <img class="card__image card__image--even" src="https://via.placeholder.com/400/400" />
+                <img class="card__image card__image--even" src="img/little_grazias.png" />
                 <div class="card__description card__description--even">
                     <h2 class="card__header">Little Grazias</h2>
                     <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis reiciendis nam quo atque, necessitatibus perspiciatis ab accusantium quis hic minima veritatis nostrum libero asperiores et, eaque ducimus dicta nulla quaerat magnam illo quod eius soluta!</p>
@@ -167,64 +167,64 @@
             <div class="teachers__container">
                 <div class="teacher__row">
                     <div class="teacher__card">
-                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <img class="teacher__image" src="img/teacher_01.png" />
                         <h3 class="teacher__name">Teacher Name</h3>
                         <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                     </div> <!-- .teacher__card -->
                     <div class="teacher__card">
-                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <img class="teacher__image" src="img/teacher_02.png" />
                             <h3 class="teacher__name">Teacher Name</h3>
                             <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                         </div> <!-- .teacher__card -->
                         <div class="teacher__card">
-                                <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                                <img class="teacher__image" src="img/teacher_03.png" />
                                 <h3 class="teacher__name">Teacher Name</h3>
                                 <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                             </div> <!-- .teacher__card -->
                             <div class="teacher__card">
-                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <img class="teacher__image" src="img/teacher_04.png" />
                         <h3 class="teacher__name">Teacher Name</h3>
                         <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                     </div> <!-- .teacher__card -->
                     <div class="teacher__card">
-                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <img class="teacher__image" src="img/teacher_05.png" />
                         <h3 class="teacher__name">Teacher Name</h3>
                         <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                     </div> <!-- .teacher__card -->
                     <div class="teacher__card">
-                        <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                        <img class="teacher__image" src="img/teacher_06.png" />
                         <h3 class="teacher__name">Teacher Name</h3>
                         <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                     </div> <!-- .teacher__card -->
                 </div> <!-- .teacher__row -->
                 <div class="teacher__row">
                         <div class="teacher__card">
-                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <img class="teacher__image" src="img/teacher_03.png" />
                             <h3 class="teacher__name">Teacher Name</h3>
                             <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                         </div> <!-- .teacher__card -->
                         <div class="teacher__card">
-                                <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                                <img class="teacher__image" src="img/teacher_08.png" />
                                 <h3 class="teacher__name">Teacher Name</h3>
                                 <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                             </div> <!-- .teacher__card -->
                             <div class="teacher__card">
-                                    <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                                    <img class="teacher__image" src="img/teacher_09.png" />
                                     <h3 class="teacher__name">Teacher Name</h3>
                                     <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                                 </div> <!-- .teacher__card -->
                                 <div class="teacher__card">
-                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <img class="teacher__image" src="img/teacher_06.png" />
                             <h3 class="teacher__name">Teacher Name</h3>
                             <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                         </div> <!-- .teacher__card -->
                         <div class="teacher__card">
-                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <img class="teacher__image" src="img/teacher_01.png" />
                             <h3 class="teacher__name">Teacher Name</h3>
                             <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                         </div> <!-- .teacher__card -->
                         <div class="teacher__card">
-                            <img class="teacher__image" src="https://via.placeholder.com/169x251" />
+                            <img class="teacher__image" src="img/teacher_02.png" />
                             <h3 class="teacher__name">Teacher Name</h3>
                             <h4 class="teacher__info"><a href="#" class="teacher__link">More Information</a></h4>
                         </div> <!-- .teacher__card -->
