places img in it's own div - a bit better, still not correct

--- a/dance.html
+++ b/dance.html
@@ -81,7 +81,9 @@
     <section class="about">
         <div class="container">
             <div class="card">
-                <img class="card__image" src="img/programs.png" />
+                <div class="card__image">
+                    <img src="img/programs.png" />
+                </div> <!-- .card__image -->
                 <div class="card__description">
                     <h2 class="card__header">Our Programs</h2>
                     <ul class="program__pages">
@@ -109,7 +111,9 @@
             </div> <!-- .card -->
 
             <div class="card card--even">
-                <img class="card__image card__image--even" src="img/little_grazias.png" />
+                <div class="card__image card__image--even">
+                <img src="img/little_grazias.png" />
+                </div> <!-- .card__image-->
                 <div class="card__description card__description--even">
                     <h2 class="card__header">Little Grazias</h2>
                     <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis reiciendis nam quo atque, necessitatibus perspiciatis ab accusantium quis hic minima veritatis nostrum libero asperiores et, eaque ducimus dicta nulla quaerat magnam illo quod eius soluta!</p>
