--- a/dance.html
+++ b/dance.html
@@ -236,7 +236,7 @@
             </div> <!-- .teachers -->
             <button class="btn btn--view-all">View All <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
             <div class="location">
-                <img src="img/map.png" alt="School location on Google Maps" class="location__map" />
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114964.38943811497!2d-80.29949850766117!3d25.78254531098417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b0a20ec8c111%3A0xff96f271ddad4f65!2sMiami%2C+FL!5e0!3m2!1sen!2sus!4v1542342709475" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="location__map"></iframe>
             </div>
         </div> <!-- .container -->
     </section> <!-- .teachers -->
