--- a/css-playground/santa.html
+++ b/css-playground/santa.html
@@ -6,9 +6,11 @@
     <title>CSS Santa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/santa.css" />
-    <script src="santa.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        
+    </div>
+    <script src="santa.js"></script>
 </body>
 </html>
